--- a/ML_I_Assignment_W24.ipynb
+++ b/ML_I_Assignment_W24.ipynb
@@ -498,7 +498,7 @@
         "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
-        "from sklearn.naive_bayes import ComplementNB, GaussianNB\n",
+        "from sklearn.naive_bayes import ComplementNB, MultinomialNB, GaussianNB\n",
         "from sklearn.neural_network import MLPClassifier\n",
         "from sklearn.inspection import permutation_importance\n",
         "\n",
@@ -855,7 +855,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 3.4.2 What did you notice regarding the importance of the different hyperparameters you tried? We suggest that you use tables (for example, with the performance of different models) and graphs (for example, with training and validation error) (15pt)"
+        "### 3.4.2 What did you notice regarding the importance of the different hyperparameters you tried? We suggest that you use tables (for example, with the performance of different models) or graphs (for example, with training and validation error) (15pt)"
       ],
       "metadata": {
         "id": "cm7tYUv3dwjq"
